[package]
name = "simple-icp"
version = "0.2.0"
edition = "2021"
authors = ["Powei Lin <poweilin1994@gmail.com>"]
description = "Kiss icp in pure rust"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/powei-lin/simple-icp"
repository = "https://github.com/powei-lin/simple-icp"

[dependencies]
nalgebra = "0.34.0"
rayon = "1.10.0"
serde = { version = "1", features = ["derive"] }
